workspace/DevP360/src/objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__PrimaryGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a person&apos;s primary group</description>
        <label>Primary Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Rollups__c</fullName>
        <label>Rollups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Tasks</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>